Project settings updated

--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = mirror of git://anongit.freedesktop.org/pulseaudio/pulseaudio
+	state = read only
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
